Vytvorenie priečinku common pre colors. Upravené importy

--- a/src/components/articles/ArticleContent.module.scss
+++ b/src/components/articles/ArticleContent.module.scss
@@ -1,4 +1,4 @@
-@import "../../Colors.scss";
+@import "../../common/Colors.scss";
 
 .agendy-vyber-obsahu {
   background-color: rgb(255, 255, 255);
