--- a/src/components/tabWindow/tabpages/TabPageMapyData.module.scss
+++ b/src/components/tabWindow/tabpages/TabPageMapyData.module.scss
@@ -1,4 +1,4 @@
-@import "../../../Colors.scss";
+@import "../../../common/Colors.scss";
 
 .mapy-data {
   /* background-image: url("https://cdn.pixabay.com/photo/2016/05/14/11/08/earth-1391672__340.jpg");
