--- a/src/components/tabWindow/tabpages/TabPageTemy.module.scss
+++ b/src/components/tabWindow/tabpages/TabPageTemy.module.scss
@@ -1,4 +1,4 @@
-@import "../../../Colors.scss";
+@import "../../../common/Colors.scss";
 
 .temy {
   /* background-image: url("https://cdn.pixabay.com/photo/2015/07/13/17/59/dandelion-843587_960_720.jpg");
