--- a/src/components/tabWindow/tabpages/TabPageAgendy.module.scss
+++ b/src/components/tabWindow/tabpages/TabPageAgendy.module.scss
@@ -1,4 +1,4 @@
-@import "../../../Colors.scss";
+@import "../../../common/Colors.scss";
 
 .agendy {
   /* background-image: url("https://media.istockphoto.com/photos/organic-drop-shadow-on-a-white-wall-picture-id1220932948?b=1&k=20&m=1220932948&s=170667a&w=0&h=ZqpcmywVhXZT8QTVS1vwrDyjfd8LjeTOZTsgBRxuV_c=");
