--- a/src/components/pages/homepage/tabwindow/tabpages/TabPageStavZP.module.scss
+++ b/src/components/pages/homepage/tabwindow/tabpages/TabPageStavZP.module.scss
@@ -1,4 +1,4 @@
-@import "../../../common/Colors.scss";
+@import "../../../../../common/Colors.scss";
 
 .stav-zp {
   /* background-image: url("https://cdn.pixabay.com/photo/2016/12/14/04/13/wave-1905610__340.jpg");
