--- a/src/components/pages/homepage/tabwindow/tabpages/TabPageAktualneDianie.module.scss
+++ b/src/components/pages/homepage/tabwindow/tabpages/TabPageAktualneDianie.module.scss
@@ -1,4 +1,4 @@
-@import "../../../common/Colors.scss";
+@import "../../../../../common/Colors.scss";
 
 .aktualne-dianie {
   background-image: linear-gradient(
