--- a/src/components/pages/homepage/tabwindow/tabpages/TabPageKalendar.module.scss
+++ b/src/components/pages/homepage/tabwindow/tabpages/TabPageKalendar.module.scss
@@ -1,20 +1,15 @@
-@import "../../../common/Colors.scss";
+@import "../../../../../common/Colors.scss";
 
-.temy {
-  /* background-image: url("https://cdn.pixabay.com/photo/2015/07/13/17/59/dandelion-843587_960_720.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover; */
-
+.kalendar {
   background-image: linear-gradient(
-    to right bottom,
+    to left top,
     $gradient-left,
     $gradient-middle,
     $gradient-right
   );
 }
 
-.temy-headers {
+.kalendar-headers {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
@@ -22,7 +17,7 @@
   background-color: white;
 }
 
-.temy-headers h2 {
+.kalendar-headers h2 {
   font-weight: 400;
   font-size: 19px;
   line-height: 25px;
@@ -30,55 +25,68 @@
   align-items: center;
 }
 
-.temy-content {
+.kalendar-content {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  gap: 1rem;
   padding: 1rem;
   padding: 1rem 20vw;
   justify-content: center;
 }
 
-.temy-col {
+.kalendar-col {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  padding: 0.5rem;
   min-width: 310px;
 }
 
-.odkazy {
+.kalendar-articles {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  background-color: white;
   gap: 1rem;
-  padding: 0.5rem 1rem;
   background-color: white;
-  flex-grow: 1;
-}
-.odkazy a {
   flex-grow: 1;
 }
 
-.temy-article {
+.kalendar-articles-right {
+  background-color: white;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 25px;
   display: flex;
-  flex-direction: column;
-  gap: 1rem;
+  align-items: center;
   flex-grow: 1;
+  flex-direction: column;
+  padding: 1rem;
+  gap: 1rem;
+}
+
+.kalendar-articles-right button {
+  border: none;
+  font-weight: 300;
+  letter-spacing: 0.8px;
+  color: white;
+  background-color: $tab-text-color-active;
+  border-radius: 0.5rem;
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  padding: 18px 27px;
 }
 
 @media (max-width: $show-mobile) {
-  .temy {
+  .kalendar {
     padding: 0;
   }
 
-  .temy-content {
+  .kalendar-content {
     display: flex;
     flex-direction: column;
     gap: 1rem;
   }
 
-  .odkazy {
-    gap: 10px;
+  .kalendar-articles {
+    gap: 0.2rem;
   }
 }
