--- a/src/components/pages/homepage/tabwindow/tabpages/TabPageTemy.module.scss
+++ b/src/components/pages/homepage/tabwindow/tabpages/TabPageTemy.module.scss
@@ -1,20 +1,20 @@
-@import "../../../common/Colors.scss";
+@import "../../../../../common/Colors.scss";
 
-.dokumenty {
-  /* background-image: url("https://cdn.pixabay.com/photo/2016/12/14/04/13/wave-1905610__340.jpg");
+.temy {
+  /* background-image: url("https://cdn.pixabay.com/photo/2015/07/13/17/59/dandelion-843587_960_720.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover; */
 
   background-image: linear-gradient(
-    to left bottom,
+    to right bottom,
     $gradient-left,
     $gradient-middle,
     $gradient-right
   );
 }
 
-.dokumenty-headers {
+.temy-headers {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
@@ -22,7 +22,7 @@
   background-color: white;
 }
 
-.dokumenty-headers h2 {
+.temy-headers h2 {
   font-weight: 400;
   font-size: 19px;
   line-height: 25px;
@@ -30,7 +30,7 @@
   align-items: center;
 }
 
-.dokumenty-content {
+.temy-content {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 1rem;
@@ -39,7 +39,7 @@
   justify-content: center;
 }
 
-.dokumenty-col {
+.temy-col {
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -56,12 +56,11 @@
   background-color: white;
   flex-grow: 1;
 }
-
 .odkazy a {
   flex-grow: 1;
 }
 
-.dokumenty-article {
+.temy-article {
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -69,11 +68,11 @@
 }
 
 @media (max-width: $show-mobile) {
-  .dokumenty {
+  .temy {
     padding: 0;
   }
 
-  .dokumenty-content {
+  .temy-content {
     display: flex;
     flex-direction: column;
     gap: 1rem;
