Opravene warningy v css pridaná clean up function pre useEffect v homepage pri fetchovaní dát

--- a/src/components/mainMenu/MainMenuMenuItem.module.scss
+++ b/src/components/mainMenu/MainMenuMenuItem.module.scss
@@ -51,7 +51,7 @@
 .menu-item {
   display: flex;
   align-items: center;
-  justify-content: start;
+  justify-content: flex-start;
   text-decoration: none;
 }
 
