--- a/src/components/mainMenu/MainMenuLangChoice.module.scss
+++ b/src/components/mainMenu/MainMenuLangChoice.module.scss
@@ -56,7 +56,7 @@
 .menu-item {
   display: flex;
   align-items: center;
-  justify-content: start;
+  justify-content: flex-start;
   text-decoration: none;
 }
 
