--- a/src/components/mainMenu/MainMenu.module.scss
+++ b/src/components/mainMenu/MainMenu.module.scss
@@ -1,6 +1,8 @@
 @import "../../common/Colors.scss";
 
 .main-menu {
+  padding-right: 1rem;
+  padding-left: 0.3rem;
   color: $main-menu;
   height: 60px;
   display: flex;
@@ -13,10 +15,10 @@
   align-items: center;
   background-color: white;
   box-shadow: 0 5px 3px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+  z-index: 100;
 }
 
 .logo {
-  padding-top: 4px;
   text-decoration: none;
   font-size: clamp(2rem, 4vw, 5rem);
   color: inherit;
