--- a/src/components/pagecomponents/PageMenu.module.scss
+++ b/src/components/pagecomponents/PageMenu.module.scss
@@ -12,6 +12,7 @@
   text-align: start;
   width: 100%;
   cursor: pointer;
+  transition: width 2s;
 
   font-size: 16px;
   text-decoration: underline;
@@ -24,6 +25,10 @@
   line-height: 25px;
 
   padding-bottom: 0.5rem;
+}
+
+.menu-button:hover {
+  font-weight: bold;
 }
 
 .menu-button-active {
