Vyznačenie aktívnych linkov v menu.

--- a/src/components/pagecomponents/PageMenu.module.scss
+++ b/src/components/pagecomponents/PageMenu.module.scss
@@ -27,6 +27,11 @@
   padding-bottom: 0.5rem;
 }
 
+.menu-button-active {
+  color: $main-menu-active;
+  font-weight: bold;
+}
+
 .menu-button:hover,
 .menu-button:active {
   font-weight: bold;
