--- a/src/components/pageblocks/PageBlockCenter.module.scss
+++ b/src/components/pageblocks/PageBlockCenter.module.scss
@@ -7,6 +7,9 @@
   background-color: white;
   overflow: hidden;
 }
-.block main {
+.block-main {
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
 }
