--- a/src/components/mainMenu/MainMenu.module.scss
+++ b/src/components/mainMenu/MainMenu.module.scss
@@ -16,11 +16,12 @@
   background-color: white;
   box-shadow: 0 5px 3px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.05);
   z-index: 100;
+  overflow: hidden;
 }
 
 .logo {
   text-decoration: none;
-  font-size: clamp(2rem, 4vw, 5rem);
+  font-size: clamp(3rem, 5vw, 6rem);
   color: inherit;
 }
 .logo img {
