úprava hover štýlov -> vymazanie bold textu pridanie background global color

--- a/src/common/Colors.scss
+++ b/src/common/Colors.scss
@@ -2,6 +2,7 @@
 $main-menu: #000000;
 $main-menu-active: #6b4732;
 $main-menu-hover: #dadada;
+$hover-color: rgba(200, 200, 200, 0.3);
 
 $tab-text-color: #11242e;
 $tab-text-color-active: #f56520;
