--- a/src/components/mainMenu/MainMenuMenuItem.module.scss
+++ b/src/components/mainMenu/MainMenuMenuItem.module.scss
@@ -13,7 +13,7 @@
 
   font-size: 16px;
   color: $main-menu;
-  padding: 0.5rem;
+  padding: 0.5rem 1rem;
   border: none;
   background-color: inherit;
   cursor: pointer;
@@ -23,7 +23,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-
   font-size: 16px;
   color: $main-menu-active;
   padding: 0.5rem;
@@ -32,9 +31,15 @@
   font-weight: bold;
 }
 
+.menu-button:hover,
+.menu-button:focus,
+.menu-button:active {
+  border-radius: 1rem;
+  background-color: $hover-color;
+}
+
 .btn-active {
   color: $active-main-menu-btn !important;
-  font-weight: bold;
 }
 
 .menu-items {
@@ -64,12 +69,7 @@
 }
 
 .menu-item-link-active {
-  font-weight: bold;
-}
-.menu-item-link-active:hover,
-.menu-item-link-active:active {
   background-color: $main-menu-hover;
-  font-weight: bold;
 }
 
 @media (max-width: $show-mobile) {
