--- a/src/components/pagecomponents/PageMenu.module.scss
+++ b/src/components/pagecomponents/PageMenu.module.scss
@@ -23,8 +23,7 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 25px;
-
-  padding-bottom: 0.5rem;
+  padding: 0.5rem;
 }
 
 .menu-button-active {
@@ -33,6 +32,8 @@
 }
 
 .menu-button:hover,
+.menu-button:focus,
 .menu-button:active {
-  font-weight: bold;
+  border-radius: 1rem;
+  background-color: $hover-color;
 }
