--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -1,12 +1,9 @@
 @import "../../common/Colors.scss";
 
 .footer {
-  padding-top: 2vh !important;
-  height: 10vh;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  padding: 0 2.5vw;
-  color: $footer-text-color;
+  padding: 1rem;
 }
 .footer a {
   text-decoration: underline;
@@ -46,12 +43,12 @@
   object-fit: cover;
 }
 
-@media only screen and (min-width: 1200px) {
+/* @media only screen and (min-width: 1200px) {
   .footer {
     padding: 2vw 20vw;
     margin-bottom: 2rem;
   }
-}
+} */
 
 @media (max-width: $show-mobile) {
   .footer {
