Pridaný BGImage a smooth loading animácia

--- a/src/components/pages/Page.module.scss
+++ b/src/components/pages/Page.module.scss
@@ -1,5 +1,18 @@
+.page .page-blocks {
+  animation: pageSmooth 0.2s ease-in-out;
+}
+
 .page-blocks {
   display: flex;
   padding: 1rem;
   gap: 1rem;
+}
+
+@keyframes pageSmooth {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
