--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -1,26 +1,33 @@
 @import "../../common/Colors.scss";
 
+.footer-wrapper {
+  border-top: 1px solid rgba(0, 0, 0, 0.3);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+  padding: 1.5rem 0;
+  display: grid;
+  justify-items: center;
+}
+
 .footer {
   display: grid;
+  max-width: 1440px;
   grid-template-columns: 1fr 1fr;
   padding: 1rem;
 }
 .footer a {
   text-decoration: underline;
   color: $footer-text-color;
+  padding: 0.5rem;
 }
 
 .footer-left {
   display: grid;
-  gap: 1rem;
   grid-template-rows: 70% 30%;
 }
 
 .footer-left-links {
-  padding: 0.5rem 0;
   display: flex;
   flex-wrap: wrap;
-  column-gap: 1rem;
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
@@ -28,13 +35,11 @@
 
 .footer-right {
   display: grid;
-  gap: 1rem;
   grid-template-rows: 70% 30%;
 }
 
 .footer-right-logo {
   display: flex;
-  padding: 0.5rem 0;
   gap: 0.5rem;
 }
 
@@ -42,13 +47,6 @@
   max-width: 50px;
   object-fit: cover;
 }
-
-/* @media only screen and (min-width: 1200px) {
-  .footer {
-    padding: 2vw 20vw;
-    margin-bottom: 2rem;
-  }
-} */
 
 @media (max-width: $show-mobile) {
   .footer {
