Pridaný Normalize pre CKEditor HTML generated code. CSS pre background image Pridaný kontainer pre max - width

--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -7,6 +7,10 @@
   box-sizing: border-box;
 }
 
+body {
+  display: flex;
+  justify-content: center;
+}
 /* *:focus {
   outline: none !important;
   border:2px solid rgb(255, 156, 156) !important;
