--- a/src/components/articles/ArticleSmall.module.scss
+++ b/src/components/articles/ArticleSmall.module.scss
@@ -5,6 +5,7 @@
   display: grid;
   grid-template-columns: 30% 70%;
   flex-grow: 1;
+  height: 8rem;
 }
 
 .small-aricle-img {
@@ -12,7 +13,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  /* height: 100%; */
+  height: 100%;
   object-fit: cover;
   overflow: hidden;
   aspect-ratio: 1 / 1;
