--- a/src/components/pages/Page.module.scss
+++ b/src/components/pages/Page.module.scss
@@ -1,8 +1,27 @@
+@import "../../common/Colors.scss";
+
+.page {
+  padding-top: 3.75rem;
+  z-index: 0;
+}
 .page .page-blocks {
   animation: pageSmooth 0.2s ease-in-out;
 }
 
+.page-bgimage {
+  display: flex;
+  justify-content: center;
+  width: 100vw;
+  background-repeat: no-repeat;
+  -webkit-background-size: 100% 15rem;
+  -moz-background-size: 100% 15rem;
+  -o-background-size: 100% 15rem;
+  background-size: 100% 15rem;
+  margin-left: calc(50% - 50vw);
+}
+
 .page-blocks {
+  max-width: $max-width;
   display: flex;
   padding: 1rem;
   gap: 1rem;
