--- a/src/components/pages/homepage/HpHeader.module.scss
+++ b/src/components/pages/homepage/HpHeader.module.scss
@@ -1,12 +1,13 @@
 @import "../../../common/Colors.scss";
 
 .hp-header {
-  padding: 0 20vw;
+  display: flex;
+  justify-content: center;
+  width: 750px;
   padding-top: 15vh;
   padding-bottom: 5vh;
   display: flex;
   gap: 0.5rem;
-  justify-content: center;
   flex-direction: column;
 }
 
