--- a/src/components/pages/homepage/tabwindow/tabpages/TabPageAktualneDianie.module.scss
+++ b/src/components/pages/homepage/tabwindow/tabpages/TabPageAktualneDianie.module.scss
@@ -1,20 +1,22 @@
 @import "../../../../../common/Colors.scss";
 
 .aktualne-dianie {
-  background-image: linear-gradient(
-    to right top,
-    $gradient-left,
-    $gradient-middle,
-    $gradient-right
-  );
+  display: flex;
+  justify-content: center;
+  height: 40rem;
+  width: 100vw;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 .aktualne-dianie-content {
+  padding: 1rem 0;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  padding: 1rem;
   gap: 1rem;
-  padding: 1rem 20vw;
-  justify-content: center;
+  height: 100%;
+  max-width: $max-width;
 }
 
 @media (max-width: $show-mobile) {
