--- a/src/components/pages/homepage/tabwindow/tabpages/columns/ColNewsBig.module.scss
+++ b/src/components/pages/homepage/tabwindow/tabpages/columns/ColNewsBig.module.scss
@@ -9,16 +9,18 @@
 
 .cbn-headers {
   display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  padding: 10px;
+  justify-content: flex-start;
+  align-items: center;
   background-color: white;
+  padding: 0.5rem;
+  height: 2.5rem;
 }
 
 .cbn-headers h2 {
+  display: flex;
+  flex-grow: 1;
   font-weight: 400;
-  font-size: 19px;
-  line-height: 25px;
+  font-size: 20px;
   display: flex;
   align-items: center;
 }
