--- a/src/components/pages/homepage/tabwindow/ColPromo.module.scss
+++ b/src/components/pages/homepage/tabwindow/ColPromo.module.scss
@@ -1,13 +1,13 @@
-@import "../../../../../../common/Colors.scss";
+@import "../../../../common/Colors.scss";
 
-.cbn-col {
+.col-promo-col {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  min-width: 310px;
+  min-width: 20rem;
 }
 
-.cbn-headers {
+.col-promo-headers {
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -16,18 +16,18 @@
   height: 2.5rem;
 }
 
-.cbn-headers h2 {
+.col-promo-headers h2 {
   display: flex;
   flex-grow: 1;
   font-weight: 400;
-  font-size: 20px;
+  font-size: 1.25rem;
   display: flex;
   align-items: center;
 }
 
-.cbn-articles {
+.col-promo-article {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
   flex-grow: 1;
+  gap: 1rem;
 }
