--- a/src/components/pages/homepage/tabwindow/TabPanel.module.scss
+++ b/src/components/pages/homepage/tabwindow/TabPanel.module.scss
@@ -1,3 +1,32 @@
+@import "../../../../common/Colors.scss";
+
 .tab-panel {
-  padding-bottom: 5rem;
+  display: flex;
+  justify-content: center;
+  height: 40rem;
+  width: 100vw;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+.tab-panel-content {
+  padding: 1rem 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 1rem;
+  height: 100%;
+  max-width: $max-width;
+}
+
+@media (max-width: $show-mobile) {
+  .tab-panel {
+    padding: 0;
+  }
+  .tab-panel-content {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 1rem;
+  }
 }
