--- a/src/components/pageblocks/PageHeader.module.scss
+++ b/src/components/pageblocks/PageHeader.module.scss
@@ -2,8 +2,7 @@
 
 .page-header {
   display: flex;
-  padding: 1rem;
-  padding-top: 1.5rem;
+  padding: 1.5rem 0;
   justify-content: space-between;
   align-items: center;
 }
