--- a/src/components/pages/homepage/tabwindow/TabPanel.module.scss
+++ b/src/components/pages/homepage/tabwindow/TabPanel.module.scss
@@ -22,11 +22,15 @@
 @media (max-width: $show-mobile) {
   .tab-panel {
     padding: 0;
+    height: auto;
+    width: 100%;
+    padding-top: 1rem;
   }
   .tab-panel-content {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    padding: 1rem;
+    padding: 0;
+    width: 100%;
   }
 }
