--- a/src/components/pages/homepage/tabwindow/TabWindow.module.scss
+++ b/src/components/pages/homepage/tabwindow/TabWindow.module.scss
@@ -10,6 +10,9 @@
 }
 
 @media (max-width: $show-mobile) {
+  .tab-window {
+    width: 100%;
+  }
   .tab-list {
     justify-content: center;
     align-items: center;
