Uprava paddingov a farieb

--- a/src/common/Colors.scss
+++ b/src/common/Colors.scss
@@ -1,25 +1,20 @@
 /* farby */
 $main-menu: #000000;
-$main-menu-active: #6b4732;
+$main-menu-active: #312117;
 $main-menu-hover: #dadada;
 $hover-color: rgba(200, 200, 200, 0.3);
 
 $tab-text-color: #11242e;
+
 $tab-text-color-active: #f56520;
 $odkazy-color: #f56520;
 
 $artice-title-color: #6b4732;
 $article-date-category-color: #626a6e;
-$popularny-obsah-btn-color: #f56520;
-
 $footer-text-color: #000000;
 
 $agendy-stvorec-farba: red;
-$stav-zp-stvorec-farba: red;
 $agendy-subtitle-farba: #6b4732;
-$stav-zp-subtitle-farba: #6b4732;
-$mapy-data-title-farba: #6b4732;
-$kalendar-title-farba: #6b4732;
 
 $gradient-left: #83cb6d;
 $gradient-middle: #e4f0ec;
@@ -27,8 +22,7 @@ $gradient-right: #87d4ee;
 
 $active-main-menu-btn: #086300;
 
-$odpady-nadpis-od-color: #5cb343;
-$odpady-nadpis-pady-color: #6b4732;
+$page-header-title: #6b4732;
 
 $breadcrumbs-color-title: #757993;
 $breadcrumbs-color-active-title: #6b4732;
