--- a/src/components/pageblocks/PageHeader.module.scss
+++ b/src/components/pageblocks/PageHeader.module.scss
@@ -7,7 +7,7 @@
   align-items: center;
 }
 .page-header-title {
-  color: $odpady-nadpis-pady-color;
+  color: $page-header-title;
   font-weight: 400;
   font-size: 32px;
   line-height: 36px;
