--- a/src/common/Colors.scss
+++ b/src/common/Colors.scss
@@ -13,8 +13,8 @@ $artice-title-color: #6b4732;
 $article-date-category-color: #626a6e;
 $footer-text-color: #000000;
 
-$agendy-stvorec-farba: red;
-$agendy-subtitle-farba: #6b4732;
+$article-simple-content-stvorec-farba: red;
+$article-simple-content-subtitle-farba: #6b4732;
 
 $gradient-left: #83cb6d;
 $gradient-middle: #e4f0ec;
@@ -28,4 +28,4 @@ $breadcrumbs-color-title: #757993;
 $breadcrumbs-color-active-title: #6b4732;
 
 $show-mobile: 1000px;
-$max-width: 1280px;
+$max-width: 1300px; //+20px -> padding-left, padding-right -> 10px
