--- a/src/components/mainMenu/MainMenu.module.scss
+++ b/src/components/mainMenu/MainMenu.module.scss
@@ -9,12 +9,12 @@
   left: 0;
   right: 0;
   background-color: white;
-  position: fixed;
   z-index: 1;
   box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
 }
 
 .main-menu {
+  padding: 0 10px;
   display: flex;
   flex-grow: 1;
   justify-content: space-between;
