--- a/src/components/pages/homepage/tabwindow/TabPanel.module.scss
+++ b/src/components/pages/homepage/tabwindow/TabPanel.module.scss
@@ -11,7 +11,7 @@
   background-size: cover;
 }
 .tab-panel-content {
-  padding: 1rem 0;
+  padding: 1rem;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 1rem;
