--- a/src/components/articles/ArticleBig.module.scss
+++ b/src/components/articles/ArticleBig.module.scss
@@ -25,16 +25,13 @@
 }
 
 .title {
-  height: 50px;
+  margin: 0;
   font-weight: 400;
   font-size: 16px;
   display: flex;
   flex: none;
-  order: 0;
-  align-self: stretch;
   color: $artice-title-color;
   padding: 0.5rem;
-  overflow: hidden;
   text-transform: uppercase;
 }
 
@@ -44,14 +41,11 @@
 }
 
 .date-category {
-  height: 50px;
   padding: 0.5rem;
+  margin: 0;
   color: $article-date-category-color;
   font-weight: 400;
   font-size: 14px;
-  line-height: 20px;
-  order: 1;
-  align-self: stretch;
 }
 
 @media (max-width: $show-mobile) {
