--- a/src/components/pages/homepage/tabwindow/ColPromo.module.scss
+++ b/src/components/pages/homepage/tabwindow/ColPromo.module.scss
@@ -26,8 +26,9 @@
 }
 
 .col-promo-article {
+  background-color: white;
   display: flex;
   flex-direction: column;
-  flex-grow: 1;
+  flex-grow: 1; 
   gap: 1rem;
 }
