--- a/src/components/pages/homepage/tabwindow/TabPanel.module.scss
+++ b/src/components/pages/homepage/tabwindow/TabPanel.module.scss
@@ -3,7 +3,7 @@
 .tab-panel {
   display: flex;
   justify-content: center;
-  height: 40rem;
+  //height: 40rem;
   width: 100vw;
   -webkit-background-size: cover;
   -moz-background-size: cover;
