--- a/src/components/pages/homepage/tabwindow/ColMenu.module.scss
+++ b/src/components/pages/homepage/tabwindow/ColMenu.module.scss
@@ -32,7 +32,7 @@
   flex-grow: 1;
   background-color: white;
   gap: 1rem;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem;
   background-color: white;
 }
 .col-menu-odkazy a {
