--- a/src/components/mainMenu/MainMenuLangChoice.module.scss
+++ b/src/components/mainMenu/MainMenuLangChoice.module.scss
@@ -22,7 +22,7 @@
   justify-content: center;
 
   font-size: clamp(0.9rem, 1vw, 1.5rem);
-  color: $main-menu;
+  color: $text-color;
   padding: 0.5rem;
   border: none;
   background-color: inherit;
