--- a/src/components/breadcrumbs/Breadcrumbs.module.scss
+++ b/src/components/breadcrumbs/Breadcrumbs.module.scss
@@ -13,7 +13,7 @@
 .breadcrumbs-home-icon {
   font-size: 16px !important;
   margin-top: 4px;
-  color: black;
+  color: $text-color;
 }
 
 .breadcrumbs-arrow-icon {
