--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -9,13 +9,13 @@
 }
 
 .footer {
-  padding: 1.5rem 10px;
+  padding: 1.5rem $max-width-padding;
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
 .footer a {
   text-decoration: underline;
-  color: $footer-text-color;
+  color: $text-color;
   padding: 0.5rem;
 }
 
