--- a/src/components/mainMenu/MainMenu.module.scss
+++ b/src/components/mainMenu/MainMenu.module.scss
@@ -14,7 +14,7 @@
 }
 
 .main-menu {
-  padding: 0 10px;
+  padding: 0 $max-width-padding;
   display: flex;
   flex-grow: 1;
   justify-content: space-between;
