--- a/src/components/mainMenu/MainMenuMenuItem.module.scss
+++ b/src/components/mainMenu/MainMenuMenuItem.module.scss
@@ -12,7 +12,7 @@
   justify-content: center;
 
   font-size: 16px;
-  color: $main-menu;
+  color: $text-color;
   padding: 0.5rem 0.75rem;
   border: none;
   background-color: inherit;
