--- a/src/components/pages/homepage/tabwindow/ColMenu.module.scss
+++ b/src/components/pages/homepage/tabwindow/ColMenu.module.scss
@@ -3,8 +3,9 @@
 .col-menu-col {
   display: flex;
   flex-direction: column;
+  flex-grow: 1;
   gap: 1rem;
-  min-width: 20rem;
+  min-width: 33%;
 }
 
 .col-menu-headers {
