--- a/src/components/pages/homepage/tabwindow/ColNewsBig.module.scss
+++ b/src/components/pages/homepage/tabwindow/ColNewsBig.module.scss
@@ -3,8 +3,9 @@
 .cbn-col {
   display: flex;
   flex-direction: column;
+  flex-grow: 1;
   gap: 1rem;
-  min-width: 20rem;
+  min-width: 33%;
 }
 
 .cbn-headers {
