--- a/src/components/pages/homepage/tabwindow/TabBtn.module.scss
+++ b/src/components/pages/homepage/tabwindow/TabBtn.module.scss
@@ -16,7 +16,7 @@
 
   cursor: pointer;
   border: none;
-  color: $tab-text-color;
+  color: $text-color;
   padding: 1rem;
   text-decoration: underline;
   text-transform: uppercase;
