--- a/src/components/pages/homepage/tabwindow/TabPanel.module.scss
+++ b/src/components/pages/homepage/tabwindow/TabPanel.module.scss
@@ -3,7 +3,6 @@
 .tab-panel {
   display: flex;
   justify-content: center;
-  //height: 40rem;
   width: 100vw;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -11,9 +10,9 @@
   background-size: cover;
 }
 .tab-panel-content {
-  padding: 1rem;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  padding: 2rem $max-width-padding;
+  display: flex;
+  flex-grow: 1;
   gap: 1rem;
   height: 100%;
   max-width: $max-width;
